force-app/main/default/objects/Account/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Workday Employee ID</description>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>