force-app/main/default/objects/Account/listViews/All_Employees.listView-meta.xml
<ListView>
    <fullName>All_Employees</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_TITLE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>All Employees</label>
</ListView>